--- a/.htaccess
+++ b/.htaccess
@@ -12,3 +12,8 @@
         RewriteCond %{REQUEST_FILENAME} !-d
         RewriteRule ^(.*)$ /index.php/$1 [L]
 </IfModule>
+
+php_value upload_max_filesize 128M  
+php_value post_max_size 128M  
+php_value max_input_time 8000
+php_value max_execution_time 8000
